k8s/network-policies/internal-services-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-services-egress
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: NotIn
        values:
          - spring-cloud-gateway
          - tcp-proxy-service
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: firemud-postgresql
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: firemud-redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - podSelector:
            matchExpressions:
              - key: app
                operator: NotIn
                values:
                  - spring-cloud-gateway
                  - tcp-proxy-service
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 6565
        - protocol: TCP
          port: 4317
